Fixes a overflow issue in mobile's nav bar

--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -139,7 +139,7 @@ body {
         }
       }
       .navbar-collapse {
-        overflow: visible;
+        overflow: hidden;
 
         ul {
           @extend .nav;
